See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.39.00

              pamthreshold: fix totally bogus threshold selection with
              simple thresholding.

              pnmremap: add -norand.

              Add pamundice.

              pbmtext: improve error messages about fonts.

              Configure: do test compile for missing Libxml2 and too old
              Libxml2.

              Configure: fix bug detecting presence of libvga with
              Ldconfig.

              Configure: build properly for Mac OSX when user says
              libnetpbm will be in the default search path.

              Build: don't use 'uint' type.  Mac OSX apparently doesn't
              have it.

07.03.30 BJH  Release 10.38.0
    
              Add pamfixtrunc.

              pamtogif: Add -aspect.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamditherbw: Add -atkinson.

              pammixinterlace: Add -filter and fir and ffmpeg filters.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pammixinterlace: Add -adaptive.
              Thanks Bruce Guenter <bruce@untroubled.org>.

              pambackground: recognize mid-row background.

              ppm3d: Change default offset to zero columns.

              ppm3d: Add -color option.

              ppm3d: Add -offset option as alternative to offset argument.

              jpegtopnm: Add -repair option.

              giftopnm: Add -repair option.

              xwdtopnm: use pm_drain() to catch some format
              misinterpretations.

              pamtogif: Speed up for monochrome images.  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.

              pamtogif: Speed up for small images by using smaller
              hash table (so smaller memory footprint).  Thanks
              Prophet of the Way <afu@wta.att.ne.jp>.
